--- a/mariadb/docker-compose-mariadb.yml
+++ b/mariadb/docker-compose-mariadb.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mariadb:
-    image: lizsdocker/mariadb
+    image: lizsdocker/mariadb:latest
     # restart: always
     ports: 
       - 3306:3306
