--- a/nginx/etc/nginx/conf.d/app.conf.example
+++ b/nginx/etc/nginx/conf.d/app.conf.example
@@ -1,10 +1,10 @@
 server {
 
 	listen 80;
-	server_name app.localhost;
+	server_name myproject.localhost;
 
 	location / {
-		proxy_pass http://app:8000;
+		proxy_pass http://myproject:8000;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_X_Forwarded_For;
@@ -13,7 +13,7 @@ server {
 	}
 
 	location /static/ {
-	    alias /var/www/app/static/;
+	    alias /var/www/myproject/static/;
 	}
 
 }
